--- a/API/src/view/page/html/index.html
+++ b/API/src/view/page/html/index.html
@@ -10,13 +10,13 @@
 <body>
     <div class="origin">
         <div class="login">
-            <form action="">
-                <input type="text" placeholder="E-mail">
+            <div>
+                <input class="input-email" type="text" placeholder="E-mail">
                 
-                <input type="password" placeholder="Password">
+                <input class="input-password" type="password" placeholder="Password">
 
-                <button type="submit">Send</button>
-            </form>
+                <button class="submit-login" type="submit">Send</button>
+            </div>
         </div>
 
         <div class="options hidden">
@@ -25,5 +25,7 @@
             <button>Update Parameters</button>
         </div>
     </div>
+
+    <script src="C:\Users\eduardo.borges\Documents\Project Assistent\project-assistent\API\src\view\page\js\main.js"></script>
 </body>
 </html>
